<?xml version="1.0" encoding="utf-8"?>
<!-- strings.xml – 文字資源 -->
<resources>
    
    <string name="action_settings">設定</string>

    <string name="app_name">午茶俱樂部</string>
    <string name="title_activity_main">MyAndroidTutorial</string>
    <string name="hello_world">Hello world!</string>
 
    <string name="title">標題</string>
    <string name="enter_title">輸入標題</string>
    <string name="content">內容</string>
    <string name="enter_content">輸入內容</string>
    
    <string name="about">關於</string>
    <string name="show_app_name">顯示APP名稱</string>
    <string name="search_item">search_item</string>
    <string name="add_item">add_item</string>
    <string name="revert_item">revert_item</string>
    <string name="delete_item">delete_item</string>
    <string name="share_item">share_item</string>
    <string name="googleplus_item">googleplus_item</string>
    <string name="facebook_item">facebook_item</string>
    
    <string name="version">版本</string>
    
    <string name="afternoon_tea_list">選項</string>
    
    <string name="title_activity_color">title_activity_color</string>

</resources>
